--- a/WEBLesson_01/aboutme.html
+++ b/WEBLesson_01/aboutme.html
@@ -1,26 +1,35 @@
 <!doctype html>
 <html>
-<img src = "frisbee.jpg">
+<img src = "frisbee.jpg"><br/>
 
 <head></head>
 <body>
-	<a></a>
-	<a></a>
-	<a></a>
-	<h1>XHTML & CSS</h1>
-	
-	<h3>Editors</h3>
-	
-	<h1>Tags</h1>
-	<h3>Scope</h3>
-	<h3>Head</h3>
-	<h3>Body</h3>
-	<h3>Comments</h3>
-	<h3>Header</h3>
-	<h3>Tool Tips</h3>
-	<h3>Adding Images to Your Site</h3>
-	Take notes on your web development lesson here 
-	Use headers for each of the sections
-	Make sure your paragraphs are well-organized. 
+	<a href = "#XHTML">XHTML</a><br/>
+	<a href = "#Editors">Editors</a><br/>
+	<a href = "#Tags">Tags</a><br/>
+	<a href = "#Scope">Scope</a><br/>
+	<a href = "#Head">Head</a><br/>
+	<a href = "#Body">Body</a><br/>
+	<a href = "#Comments">Comments</a><br/>
+	<a href = "#Header">Header</a><br/>
+	<a href = "#Tool Tips">Tool Tips</a><br/>
+	<a href = "#Adding Images to Your Site">Adding Images to Your Site</a>
+	<h1><a name = "XHTML"></a>XHTML & CSS</h1>
+	<p>XHTML and CSS are code standards that make websites work. You can view the code of any webiste you visit.</p>
+	<h3><a name = "Editors"></a>Editors</h3>
+	<p>Websites are basically text files. All you need is a simple text editor to make a website. You can use a Intergrated Development Environment.</p>
+	<p>It is unnessary to use it though.</p>
+	<h1><a name = "Tags"></a>Tags</h1>
+	<p>Language of XHTML revovles around tags. First tag you create declares the doctype, or the type of document it will be.</p>
+	<h3><a name = "Scope"></a>Scope</h3>
+	<p>Most tags have opening and closing tags. Everything in a web object is contained within the opening and closing tags.</p>
+	<p>Everthing else belongs o another object.</p>
+	<h3><a name = "Head"></a>Head</h3>
+	<p>
+	<h3><a name = "Body"></a>Body</h3>
+	<h3><a name = "Comments"></a>Comments</h3>
+	<h3><a name = "Header"></a>Header</h3>
+	<h3><a name = "Tool Tips"></a>Tool Tips</h3>
+	<h3><a name = "Adding Images to Your Site"></a>Adding Images to Your Site</h3>
 </body>
 </html>
