--- a/WEBLesson_01/aboutme.html
+++ b/WEBLesson_01/aboutme.html
@@ -11,9 +11,8 @@
 	<a href = "#Head">Head</a><br/>
 	<a href = "#Body">Body</a><br/>
 	<a href = "#Comments">Comments</a><br/>
-	<a href = "#Header">Header</a><br/>
-	<a href = "#Tool Tips">Tool Tips</a><br/>
-	<a href = "#Adding Images to Your Site">Adding Images to Your Site</a>
+	<a href = "#Header">Header</a>
+
 	<h1><a name = "XHTML"></a>XHTML & CSS</h1>
 	<p>XHTML and CSS are code standards that make websites work. You can view the code of any webiste you visit.</p>
 	<h3><a name = "Editors"></a>Editors</h3>
@@ -25,11 +24,16 @@
 	<p>Most tags have opening and closing tags. Everything in a web object is contained within the opening and closing tags.</p>
 	<p>Everthing else belongs o another object.</p>
 	<h3><a name = "Head"></a>Head</h3>
-	<p>
+	<p>It includes the information for the browser.</p>
 	<h3><a name = "Body"></a>Body</h3>
+	<p>This includes the actual thing you see on the site. &#60;p&#62; creates paragraphs since html doesn't trandlate spaces, tabs, and returns.</p>
+	<p>&#60;br/&#62; this is called line break. basically means it sperates paragraphs.</p>
+	<p>&#60;hr/&#62; creates a line that acts as a seperator.</p>
+	<p>&#60;Strong&#62; makes the word within bold.</p>
+	<p>&#60;em&#62; italicizes the word within.</p>
 	<h3><a name = "Comments"></a>Comments</h3>
+	<p>You can add comments like all the other programs. You can also add links using &#60;a&#62;. That allows us to go to links on a page.</p>
 	<h3><a name = "Header"></a>Header</h3>
-	<h3><a name = "Tool Tips"></a>Tool Tips</h3>
-	<h3><a name = "Adding Images to Your Site"></a>Adding Images to Your Site</h3>
+	<p>You can add headers with &#60;h&#40;and the numbers 1-6&#41;&#62;. The smaller the number, the larger it is. </p>
 </body>
 </html>
