--- a/WEBLesson_02/universitytable.html
+++ b/WEBLesson_02/universitytable.html
@@ -2,21 +2,30 @@
 <html>
 <head>
 <body>
-<table border = "1" width = "100%">
+<table border = "1" width = "100%" cellpadding = "10" cellspacing = "10">
 	<tr>
 		<th colspan = "5"><h3>Universities & Colleges</h3></th>
 	</tr>
 	<tr>
+		<td width = "20%"></td>
+		<th width = "20%">Name</th>
+		<th width = "20%">Location</th>
+		<th width = "20%">Description</th>
+		
 		
 	</tr>
 	<tr>
-		
-		
+		<td><img src = "https://pbs.twimg.com/profile_images/2623616530/puvdln5v6szq2hw87el3_400x400.jpeg" height = "150"></td>
+		<th>San Diego State University</th>
+		<th>San Diego, California</th>
+		<th><p>This school is behind UC Berkely and was founded in 1897. I would probably just go to this school just because it is local.</p>
 		
 	</tr>
 	<tr>
-		
-		
+		<td><img src = "https://upload.wikimedia.org/wikipedia/commons/thumb/a/a1/Seal_of_University_of_California,_Berkeley.svg/150px-Seal_of_University_of_California,_Berkeley.svg.png" height = "150"></td>
+		<th>University of California, Berkeley</th>
+		<th>Berkeley, California</th>
+		<th><p>It is ranked 3rd in the world overall by ARWU, the first among public universities. I would want to go here because I would be local and it would be interesting too.</p></th>
 		
 		
 		
