--- a/WEBLesson_03/universitytableCSS.html
+++ b/WEBLesson_03/universitytableCSS.html
@@ -1,6 +1,11 @@
 <doctype html>
 <html>
 <head>
+<style type="text/css">
+	th {color:brown;}
+	tr {font-style:italic;}
+	body {background-color:blue;}
+</style>
 <body>
 <table border = "1" width = "100%" cellpadding = "10" cellspacing = "10">
 	<tr>
