--- a/WEBLesson_01/index.html
+++ b/WEBLesson_01/index.html
@@ -1,10 +1,12 @@
 <!doctype html>
 <html>
 <head>
-	<title> Mr. Robinett is Awsome</title>
+	<style type = "text/css">
+	
+	</style>
 </head>
 <body>
-This is so, so ture.
+	<h1>Mr. Robinette</h1>
 </body>
 
 </html>
