--- a/WEBLesson_05/aboutmeCSS_05.html
+++ b/WEBLesson_05/aboutmeCSS_05.html
@@ -4,25 +4,19 @@
 
 <head>
 	<style type ="text/css">
-		h1 {color:blue;}
+		
 		h3 {color:green;}
 		h3 {font-style:italic;}
 		body {
 			background-color:yellow;
 		}
-		li {
-			color: yellow; 
-			border: 2px solid orange;
-			background-color: green;
-		}
-		li: before{
-			content: '';
-			display: inline-block;
-			height: 5px;
-			width: 5px;
-			background-image: url("https://img.clipartfox.com/ce7a4eea7d84ee94472001c3daf68309_globe-globe-clipart-vector_4021-4021.png");
+		
 		div {
-			border: 5px solid blue;}
+			color:blue;
+			border:5px solid green;
+			text-align: center;
+			background-color: pink;
+		}
 		
 	</style>
 	
@@ -50,12 +44,12 @@
 	<li><a href = "#Header">Header</a></li>
 </ol>
 
-	<div><h1><a name = "XHTML"></a>XHTML & CSS</h1></div>
+	<div><h1><a name = "XHTML">XHTML & CSS</a></h1></div>
 	<p>XHTML and CSS are code standards that make websites work. You can view the code of any webiste you visit.</p>
 	<h3><a name = "Editors"></a>Editors</h3>
 	<p>Websites are basically text files. All you need is a simple text editor to make a website. You can use a Intergrated Development Environment.</p>
 	<p>It is unnessary to use it though.</p>
-	<h1><a name = "Tags"></a>Tags</h1>
+	<div><h1><a name = "Tags"></a>Tags</h1></div>
 	<p>Language of XHTML revovles around tags. First tag you create declares the doctype, or the type of document it will be.</p>
 	<h3><a name = "Scope"></a>Scope</h3>
 	<p>Most tags have opening and closing tags. Everything in a web object is contained within the opening and closing tags.</p>
