--- a/WEBLesson_06/indexLesson6.html
+++ b/WEBLesson_06/indexLesson6.html
@@ -2,11 +2,19 @@
 <html>
 <head>
 	<style type = "text/css">
-	
+	 a{color: red;}
+	 
+	 p{
+	 
+	 
+	} 
+	 
 	</style>
 </head>
 <body>
-	<h1>Mr. Robinette</h1>
+	<p>Here is some things that I have done so far</p>
+	<a href = "aboutme_06.html"> Notes </a></br>
+	<a href = "universitytable_06.html"> Universities </a>
 </body>
 
 </html>
