--- a/WEBLesson_06/indexLesson6.html
+++ b/WEBLesson_06/indexLesson6.html
@@ -22,14 +22,16 @@
 	 P:first-child i {
 		color: orange;
 	 }
-
+	 #text {
+		color: yellow
+	 }
 	</style>
 </head>
 <body>
 	<div>
 	<p>Here is <i>some</i> things that I have done so far.</p>
 	<p>Here is <i>some</i> more things to put here because why not.</p>
-	<p>And then <i>some</i> more text here because we need more text I say, MORE!</p>
+	<p id = "text">And then <i>some</i> more text here because we need more text I say, MORE!</p>
 	</div>
 	<a href = "aboutme_06.html"> Notes </a></br>
 	<a href = "universitytable_06.html"> Universities </a>
