--- a/WEBLesson_10/weblesson10.html
+++ b/WEBLesson_10/weblesson10.html
@@ -6,17 +6,18 @@
     <link rel = "stylesheet" href = "main.css"/>
 </head>
 <body>
-    <header>
+	<div id = "bigwrapper">
+    <header id = "toHeader">
         <h1>Welcome to my Website!!!</h1>
     </header>
-    <nav>
+    <nav id = "topMenu">
         <ul>
             <li>Home</li>
+            <li>Tutorials</li>
             <li>About Me</li>
-            <li>My Work</li>
         </ul>
     </nav>
-    <section>
+    <section id = "mainSection">
             <h2>Content for Something</h2>
             <article>
                 <header>
@@ -47,12 +48,15 @@
                 </footer>
             </article>
     </section>
-    <aside>
-
+    <aside id = "sideNews">
+		links
+		pull quotes
+		groups of nav elements
     </aside>
-    <footer>
+	<footer id = "theFooter">
 
-    </footer>
+	</footer>
+	</div>
 
 
 
