--- a/WEBLesson_10/weblesson10.html
+++ b/WEBLesson_10/weblesson10.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<div id = "bigwrapper">
-    <header id = "toHeader">
+    <header id = "topHeader">
         <h1>Welcome to my Website!!!</h1>
     </header>
     <nav id = "topMenu">
