--- a/WEBLesson_10/weblesson10.html
+++ b/WEBLesson_10/weblesson10.html
@@ -18,7 +18,7 @@
         </ul>
     </nav>
     <section id = "mainSection">
-            <h2>Content for Something</h2>
+
             <article>
                 <header>
                     <h1>Home</h1>
@@ -49,12 +49,12 @@
             </article>
     </section>
     <aside id = "sideNews">
-		links
-		pull quotes
-		groups of nav elements
+		<h4>links</h4>
+		<h4>pull quotes</h4>
+		<h4>groups of nav elements</h4>
     </aside>
 	<footer id = "theFooter">
-
+		Copyright Nico Bruno 2017
 	</footer>
 	</div>
 
