--- a/WEBLesson_11/weblesson11.html
+++ b/WEBLesson_11/weblesson11.html
@@ -6,18 +6,19 @@
     <link rel = "stylesheet" href = "main.css"/>
 </head>
 <body>
-    <header>
+	<div id = "bigwrapper">
+    <header id = "topHeader">
         <h1>Welcome to my Website!!!</h1>
     </header>
-    <nav>
+    <nav id = "topMenu">
         <ul>
             <li>Home</li>
+            <li>Tutorials</li>
             <li>About Me</li>
-            <li>My Work</li>
         </ul>
     </nav>
-    <section>
-            <h2>Content for Something</h2>
+    <section id = "mainSection">
+
             <article>
                 <header>
                     <h1>Home</h1>
@@ -47,12 +48,15 @@
                 </footer>
             </article>
     </section>
-    <aside>
-
+    <aside id = "sideNews">
+		<h4>links</h4>
+		<h4>pull quotes</h4>
+		<h4>groups of nav elements</h4>
     </aside>
-    <footer>
-
-    </footer>
+	<footer id = "theFooter">
+		Copyright Nico Bruno 2017
+	</footer>
+	</div>
 
 
 
