--- a/WEBLesson_11/weblesson11.html
+++ b/WEBLesson_11/weblesson11.html
@@ -17,6 +17,7 @@
             <li>About Me</li>
         </ul>
     </nav>
+	<div id ="flexDiv">
     <section id = "mainSection">
 
             <article>
@@ -48,11 +49,13 @@
                 </footer>
             </article>
     </section>
+	
     <aside id = "sideNews">
 		<h4>links</h4>
 		<h4>pull quotes</h4>
 		<h4>groups of nav elements</h4>
     </aside>
+	</div>
 	<footer id = "theFooter">
 		Copyright Nico Bruno 2017
 	</footer>
