--- a/WEBLesson_11/kid.html
+++ b/WEBLesson_11/kid.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset = "UTF-8">
 	<title> Nico's Website</title>
+	<link rel = "stylesheet" href = "new.css"/>
 </head>
 <body>
 	<section id = "parent">
